fixed z-index issue

--- a/src/css/generic.css
+++ b/src/css/generic.css
@@ -21,7 +21,7 @@ body {
 
 .popover,
 .bootstrap-datetimepicker-widget {
-    z-index: 900;
+    z-index: 980;
 }
 
 .modal {
